@startuml

entity "Plot" {
  * id : Long
  --
  name : String
}

entity "Crop" {
  * id : Long
  --
  name : String
  minMoisture : Long
  maxMoisture : Long
}

entity "Plantation" {
 * id : Long
  --
  plot_id : Long
  crop_id : Long
  plantingDate : date
  plantCount : Long
}

entity "Sensor" {
  * id : Long
  --
  plot_id : Long
  name : String
  type: ENUM [HUMIDITY, TEMPERATURE, PH]
}

entity "Valve" {
  * id : Long
  --
  plot_id : Long
  name : String
  status: ENUM [OPEN, CLOSED]
}

entity "Measurement" {
  * id : Long
  --
  sensor_id : Long
  sensorIdSnapshot : Long
  sensorNameSnapshot: String

  plot_id : Long
  plotIdSnapshot : Long
  plotNameSnapshot : String

  type: ENUM [HUMIDITY, TEMPERATURE, PH]
  measuredAt : datetime
  measuredValue : Double
}

entity "Activity" {
  * id : Long
  --
  type : ENUM [MANUAL, AUTOMATIC]

  plot_id : Long
  plotIdSnapshot : Long
  plotNameSnapshot : String

  valve_id : Long
  valveIdSnapshot : Long
  valveNameSnapshot : String

  startTime : datetime
  endTime : datetime
  status : ENUM [RUNNING, EXECUTED, CANCELLED, FAILED]

}

Plot ||--o{ Activity: is executed by
Valve ||--o{ Activity: is controlled by

Crop ||--o{ Plantation: has
Plot ||--o{ Plantation: has

Plot ||--o{ Sensor :is measured by
Plot ||--o| Valve : is controlled by

Plot ||--o{Measurement : is measured on
Sensor ||--o{Measurement: provides data to

@enduml
